style.css
/* ========== STYLES ========== */

/* === GENERAL === */
* {
  /* == COLORS == */
  --black: #1a1a1a;
  --white: #e9ecef;
  --red: #bd1f36;

  /* == FONT == */
  font-family: "Inter", sans-serif;

  /* == FONT SIZE == */
  --giga: 10rem;
  --big: 5.5rem;
  --h1: 2rem;
  --h2: 1.75rem;
  --h3: 1.15rem;
  --h4: 1rem;

  --text: 0.975rem;

  /* == RESET == */
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;

  list-style: none;
  text-decoration: none;

  scroll-behavior: smooth;
}

html,
body {
  overflow-x: hidden;
}

body {
  background: url("/assets/alexander-popov-R25Q-pAUeY8-unsplash.jpg") no-repeat
    40% -20%;
}

@font-face {
  font-family: headerFont;
  font-weight: 600;
  src: url("/assets/Font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf");
}

@font-face {
  font-family: "Inter";
  src: local("/assets/Font/Inter/Inter-VariableFont_slnt,wght.ttf");
}

/* === NAVIGATION === */

.nav-container {
  height: max-content;
  max-height: 125px;
  background-color: transparent;
  margin: 0;
  padding: 1.25rem;
}

.nav-content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 40px;
}

.nav-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 40px;
  margin: 2rem;
  box-shadow: 0px 2px 25px 5px rgba(0, 0, 0, 0.1);
  background-color: #20202064;
  border-radius: 8px;
  padding: 1rem;
}

.nav-logo {
  height: max-content;
  max-width: 180px;
}

#nav-logo {
  max-width: 100%;
  max-height: 100%;
}

.nav-list li a {
  color: var(--white);
  padding: 1rem;
  font-size: var(--h3);
}

/* === NAVIGATION MEDIA QUERY === */
@media screen and (max-width: 768px) {
  .nav-logo {
    display: none;
  }
  .nav-list {
    width: 100%;
    gap: 10px;
    margin: 1rem;
  }

  .nav-list li a {
    font-size: var(--text);
    padding: 0%;
    margin-left: 3.3px;
  }

  .nav-container {
    margin: 0%;
    padding: 0;
    z-index: 99;
  }
}

/* === MAIN === */
.main-container {
  height: 88vh;
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
}

.main-intro {
  height: max-content;
  width: 55%;
  text-align: right;
  color: var(--white);
}

#main-header {
  font-family: headerFont;
  font-size: var(--giga);
  font-weight: 400;
  color: var(--white);
}

#main-subtext {
  font-family: headerFont;
  font-size: var(--big);
}

.main-text {
  width: 30%;
  padding: 3rem;
  box-shadow: 0px 2px 25px 5px rgba(0, 0, 0, 0.1);
  background-color: #2020202c;
  border-radius: 8px;
  color: var(--white);
  height: 50vh;
  animation: float 5s ease-in-out infinite;
}

#main-text-content {
  font-size: var(--h1);
  letter-spacing: 1.25px;
}

#main-text-btn {
  background: transparent;
  border: none;
  text-align: center;
  width: 90%;
  margin-top: 2rem;
}

#main-text-btn a {
  background: #20202094;
  padding: 0.85rem;
  border-radius: 8px;
  color: var(--white);
  box-shadow: 0px 23px 22px 20px rgba(0, 0, 0, 0.173);
  font-size: 1.3rem;
  transition: all 0.55s ease-in-out;
}

#main-text-btn a:hover {
  background: #bd1f3778;
}

/* === MAIN MEDIA QUERY === */
@media screen and (max-width: 768px) {
  body {
    background: url("./assets/alexander-popov-R25Q-pAUeY8-unsplash.jpg")
      no-repeat 30% -15%;
    overflow-x: hidden;
  }

  .main-container {
    flex-direction: column;
    gap: 40px;
  }

  .main-intro {
    text-align: center;
  }

  #main-header {
    font-size: 3.5rem;
  }

  #main-subtext {
    font-size: var(--h3);
  }

  .main-text {
    width: 80%;
    animation: float 9s ease-in-out infinite;
  }

  #main-text-content {
    font-size: var(--h3);
  }

  #main-text-btn a {
    font-size: var(--text);
  }
}

/* === PHILO === */
.philo-container {
  background-color: var(--black);
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.philo-content {
  color: var(--white);

  height: 50%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 100px;
  padding: 2rem;
  margin: 50px;
  width: 90%;
}

#philo-header {
  font-family: headerFont;
  font-size: var(--giga);
  width: max-content;
}

#philo-text {
  cursor: pointer;
  font-size: var(--h2);
  border-radius: 18px;
  padding: 1.5rem;
  box-shadow: 9px 8px 20px 30px rgba(0, 0, 0, 0.398);
  animation: float 2s ease-in-out infinite;
}

#philo-text:hover {
  animation-play-state: paused;
}

#strong {
  color: var(--red);
  font-size: var(--h2);
}

/* === PHILOSPHIE MEDIA QUERY === */
@media screen and (max-width: 768px) {
  .philo-container {
    height: auto;
  }
  .philo-content {
    flex-direction: column;
    width: max-content;
  }

  #philo-header {
    font-size: 2.8rem;
  }

  #philo-text,
  #strong {
    width: 280px;
    font-size: var(--h3);
  }
}

/* === ABOUT === */
#about-header {
  font-family: headerFont;
  font-size: var(--giga);
  margin-bottom: 20rem;
}

.about-container {
  background-color: var(--black);
  color: var(--white);
  height: 250vh;
  display: flex;
  padding: 4rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-content {
  margin: 5rem;
}

.about-melvin {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 120px;
  margin-bottom: 200px;
  height: 50%;
}

.about-melvin-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: max-content;
}

#about-artist-header {
  font-family: headerFont;
  font-size: var(--giga);
  padding: 2rem;
  text-align: center;
}

#about-text {
  font-size: var(--h1);
  text-align: center;
}

.about-john {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
  gap: 120px;
  margin-bottom: 200px;
  height: 50%;
}

.about-john-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: max-content;
}

#about-img {
  height: auto;
  width: 520px;
  box-shadow: 9px 8px 20px 30px rgba(0, 0, 0, 0.398);
  border-radius: 16px;
  animation: float 4s ease-in-out infinite;
}

.about-conclusion {
  background-color: var(--black);
  text-align: center;
  height: 110vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#about-conclusion-text,
#about-conclusion-text b {
  font-size: var(--big);
  color: var(--white);
}

#about-conclusion-text b {
  color: var(--red);
}

/* === ABOUT US MEDIA QUERY === */
@media screen and (max-width: 768px) {
  .about-container {
    height: 400vh;
  }

  #about-artist-header {
    font-size: 4.5rem;
    padding: 1rem;
  }

  #about-text {
    font-size: var(--h2);
  }

  .about-melvin,
  .about-john {
    flex-direction: column;
  }

  #about-img {
    max-width: 280px;
  }

  #about-conclusion-text,
  #about-conclusion-text b {
    font-size: var(--h1);
    width: 70%;
  }
}

/* === ANIMATION === */
@keyframes float {
  0% {
    transform: translatey(0px);
  }
  50% {
    transform: translatey(-10px);
  }
  100% {
    transform: translatey(0px);
  }
}

